--- a/404.md
+++ b/404.md
@@ -1,9 +1,10 @@
 ---
 layout: default
 permalink: /404.html
+title: 'La fameuse erreur 404'
 ---
 
 # Oops !
-## Le lien que vous recherchez est indisponible ou inexistant.
+## <span style="color:red;font-weight:bold;">X</span> La ressource que vous recherchez est indisponible ou inexistante.
 
 [Revenir vers la page principale](/)
